--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ EMAIL_PORT=587
 EMAIL_USER=vaishnavvm40@gmail.com
 EMAIL_PASS="elon vdbd penf lcoa"
 JWT_SECRET="#L$i%f^e&c*o@d!e"
+JWT_SECRET_ADMIN="#e&c*o@d!eL$i%f^"
 CLOUD_NAME: dpen7vmol
 CLOUD_API_KEY: 383746135618629 
 CLOUD_API_SECRET: QHIn7bJ3gtJQngylU-LpmqnHgEw 
