--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/inference": "^4.13.12",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
@@ -19,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
